Source/app/assets/css/widget-styles.css
/**
  Output has Media queries but no .lt-ie9 and .no-mq fallbacks
  https://github.com/Team-Sass/breakpoint/wiki/No-Query-Fallbacks
**/
/*
 * Typography
 * --------------------------------------------------
 * Font, line-height, and color for body text, headings, and more.
 * Mobile first
 */
/*
 * Buttons
 * --------------------------------------------------
 * Mobile first
 */
/*
 * Forms
 * --------------------------------------------------
 * Mobile first
 */
/*
 * Global
 * --------------------------------------------------
 * Base tags with site wide classes
 */
a {
  /* See typography */ }

body {
  /* See typography */ }

button {
  /* See buttons */ }

h1, h2, h3, h4, h4, h6 {
  /* See typography */ }

input[type=submit] {
  /* See buttons */ }

table {
  /* See tables */ }

td {
  /* See tables */ }

th {
  /* See tables */ }

ul {
  /* See lists */ }

/*
 * Lists
 * --------------------------------------------------
 * Mobile first
 */
/*
 * Typography
 * --------------------------------------------------
 * Mobile first
 */
@font-face {
  font-family: 'robotoregular';
  src: url("../../fonts/Roboto-Regular-webfont.eot");
  src: url("../../fonts/Roboto-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto-Regular-webfont.woff") format("woff"), url("../../fonts/Roboto-Regular-webfont.ttf") format("truetype"), url("../../fonts/Roboto-Regular-webfont.svg#robotoregular") format("svg");
  font-weight: normal;
  font-style: normal; }

@font-face {
  font-family: 'robotobold';
  src: url("../../fonts/Roboto-Bold-webfont.eot");
  src: url("../../fonts/Roboto-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto-Bold-webfont.woff") format("woff"), url("../../fonts/Roboto-Bold-webfont.ttf") format("truetype"), url("../../fonts/ Roboto-Bold-webfont.svg#robotobold") format("svg");
  font-weight: normal;
  font-style: normal; }

/*  Use this file to define widget specific styles. */
body {
  margin: 0;
  padding: 0 4px 4px 0;
  min-width: 235px;
  max-width: 480px;
  min-height: 300px;
  max-height: 480px;
  overflow: hidden; }

.widget-container {
  border: solid 1px #51a2da;
  background-color: #51a2da;
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
  min-height: 300px;
  min-width: 245px; }
  .widget-container ul {
    list-style: none;
    padding: 0;
    margin: 0em .7em 0 .3em; }
    .widget-container ul li {
      padding: .5em 0 .5em .5em;
      border-bottom: solid 1px #80c5fb;
      position: relative; }

.header {
  background-color: white;
  padding: 5px; }

footer {
  text-align: center;
  background-color: #51a2da;
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 0px 5px 3px;
  height: 20px;
  color: white; }
  footer a {
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
    font-weight: 300;
    font-size: 0.6875em;
    color: white;
    text-decoration: none; }
  footer .separator {
    position: relative;
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
    font-size: 0.6875em;
    font-weight: 300; }

.main-view {
  position: relative;
  height: 72%; }
  .main-view .main {
    width: 100%;
    margin: 0 auto;
    height: 100%; }

.data-container {
  position: relative;
  width: 100%;
  height: 100%; }

.message {
  margin: 1.5em auto 0;
  font-size: 1em;
  background-color: #51a2da;
  color: white;
  font-family: "Open Sans", Arial, Helvetica, sans-serif;
  font-weight: 300;
  height: 100%;
  width: 80%;
  text-align: center; }
  @media (min-width: 20em) {
    .message {
      margin-top: 1em;
      font-size: 1.125em; } }
  @media (min-width: 30em) {
    .message {
      margin: 2em auto 0 auto; } }
  .message .firmname {
    color: white;
    font-weight: 600; }

.search-icon, .external-link, .return-arrow, .more {
  background: url("../../images/bc-sprites.png") no-repeat top left;
  display: inline-block; }

.search-icon {
  width: 16px;
  height: 16px;
  background-position: -5px -78px;
  top: -2px; }

.logo {
  text-align: center;
  margin: 0 auto;
  display: block;
  text-decoration: none; }
  .logo:hover, .logo:visited, .logo:active {
    text-decoration: none;
    border: none; }
  .logo img {
    width: 150px;
    border: none; }
    @media (min-width: 20em) {
      .logo img {
        width: 236px; } }

.more {
  width: 12px;
  height: 12px;
  background-position: -5px -150px;
  position: absolute;
  right: 0;
  top: 35%; }

.external-link {
  width: 20px;
  height: 20px;
  background-position: -5px -114px;
  position: relative;
  top: -5px; }

.return-arrow {
  width: 12px;
  height: 12px;
  background-position: -27px -150px; }

.field-search {
  white-space: nowrap;
  width: 100%;
  margin: 0 auto;
  position: relative;
  padding: .1em 0 .5em; }
  .field-search .clear {
    display: inline-block;
    position: absolute;
    right: 10px;
    color: #ccc;
    font-weight: bold;
    font-size: .75em;
    top: 5px;
    font-family: arial; }

.search-icon {
  background-position: 0 -73px;
  width: 35px;
  height: 35px;
  display: inline-block;
  position: absolute;
  /* left: -45px; */
  right: 5%;
  top: 0em;
  border: none; }
  .search-icon:hover {
    cursor: pointer; }

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0; }

.clearfix {
  display: inline-block; }

/* start commented backslash hack \*/
* html .clearfix {
  height: 1%; }

.clearfix {
  display: block; }

.bc-item {
  background-color: #51a2da;
  font-family: "Open Sans", Arial, Helvetica, sans-serif;
  margin: 0 1em 0 .5em;
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: .875em;
  color: #fff; }
  .bc-item:hover {
    cursor: pointer; }
  .bc-item .result {
    color: #fff;
    text-decoration: none;
    padding: .3em 0 .3em .5em;
    font-family: Arial, sans-serif;
    font-size: .9em;
    display: inline-block;
    width: 100%;
    border-bottom: solid 1px #fff; }
  .bc-item.expanded .result {
    border-bottom: none;
    background-color: white;
    color: darkblue;
    font-weight: bold; }
  .bc-item.expanded .details {
    color: darkblue;
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
    font-weight: 300;
    font-size: .7em;
    border-bottom: solid 1px #fff;
    width: 100%;
    padding: .3em 0 .3em .5em;
    background-color: white;
    border: solid 1px white; }

.scrollable {
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 165px;
  margin-right: .5em;
  margin-top: .5em; }

.ps-container.ps-active-x > .ps-scrollbar-x-rail {
  display: none !important; }

.form-group {
  text-align: right;
  margin-top: 1em; }
  .form-group button {
    background-color: white;
    color: white; }

.detail-container {
  width: 94%;
  margin: 0 .5em 0 .5em;
  color: #fff;
  font-family: "Open Sans", Arial, Helvetica, sans-serif;
  font-weight: 300;
  overflow: hidden;
  padding: .5em 0 0 0;
  font-size: .9em;
  height: 100%; }
  .detail-container .detail-item {
    margin: .5em 0;
    font-size: .93em; }
    .detail-container .detail-item a {
      color: white;
      font-weight: 600;
      text-decoration: none; }
      .detail-container .detail-item a:hover {
        color: #265b85;
        font-weight: 600; }
  .detail-container .heading {
    font-weight: 500; }
  .detail-container .more-link {
    float: none;
    display: inline-block;
    white-space: nowrap;
    bottom: 0;
    /* top: 1em; */
    height: 20px;
    border-radius: 2px;
    margin: 0 auto;
    text-align: center;
    background: #ff553a;
    padding: .3em .3em;
    cursor: pointer; }
    .detail-container .more-link .link {
      display: inline;
      height: 100%;
      width: 100%;
      color: white;
      text-decoration: none;
      position: relative;
      top: -5px; }
  .detail-container .return {
    border-bottom: solid 1px #80c5fb;
    margin-bottom: .5em; }
    .detail-container .return a {
      color: #fff;
      text-decoration: none;
      font-size: 1em;
      font-weight: 500; }
    .detail-container .return a:hover {
      color: #265b85; }

div.animated {
  height: 100%; }

input[type="text"] {
  background-color: #fff;
  display: block;
  border: none;
  height: 30px;
  position: relative;
  width: 92%;
  margin: 0 auto;
  padding: 0 0 0 4%;
  top: .5em;
  color: #777;
  border-radius: 2px;
  -webkit-border-radius: 2px;
  font-size: .82em;
  vertical-align: top; }

.no-results-found {
  width: 80%;
  margin: 3em auto;
  text-align: center;
  font-family: "Open Sans", Arial, Helvetica, sans-serif;
  color: white; }

.more-arrow {
  position: absolute;
  right: 0;
  font-weight: bold; }

  /* Let's get this party started
  ::-webkit-scrollbar {
    width: 12px;
  }
  /* Track
  ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);

  }
*/
  /* Handle
  ::-webkit-scrollbar-thumb {
    -webkit-border-radius: 3px;
    border-radius: 3px;
    width:12px;
    background: rgba(255,255,255,0.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
  }
  ::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(192,192,192,0.4);
  }
*/
.notation {
  font-weight: 300;
  font-size: .8em;
  font-style: italic; }

li .heading:hover {
  color: #265b85;
  font-weight: 500; }

.locations {
  font-size: .875em; }

.ul-parent {
  position: relative; }

.ng-leave-active {
  display: none; }

.iscroll-wrapper {
  position: relative;
  height: 160px;
  width: 100%;
  overflow: auto; }

.iscroll-scroller {
  position: relative;
  width: 100%;
  /*	-webkit-touch-callout:none;*/
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  float: left;
  padding: 0;
  height: 160px; }

